public/stylesheets/style.css
#error
	{position:fixed; top:0px; left:0px; height:100%; width:100%; background:-webkit-gradient(linear, left top, left bottom, from(#999), to(#333)); color:white; display:none; z-index:100;}
#error .message
	{text-shadow:#fff 0px 1px 0, #000 0 -1px 0; top:40%; position:absolute; font-size:2em; text-align:center; left:0px; right:0px;}
#error .notes
	{top:70%; position:absolute; text-align:center; left:0px; right:0px; font-size:1.3em;}
#waiting
	{position:fixed; top:0px; left:0px; height:100%; width:100%; background-color:lightgray; opacity:0.6; background-position:center; background-image:url(/images/waiting.gif); background-repeat:no-repeat; z-index:90;}
#identify
	{position:fixed; left:15%; right:15%; top:50%; margin-top:-1px; opacity:0.7; border-radius:30px; padding:50px; color:white; font-size:3em; text-align:center; z-index:100;}

body
	{font-family:sans-serif; background: white; margin:130px 20px 20px 20px; font-size:1.75em; overflow:hidden;}
#header
	{position:fixed; top:0px; left:0px; height:110px; width:100%; background-color:#ee9922; background-image:url(/images/logo.png); background-repeat:no-repeat; background-position:10px 10px; opacity:0.9;}
#projector-controls
	{position:fixed; top:0px; right:20px; height:18px; background-color:#cccccc; border-bottom-left-radius:5px; border-bottom-right-radius:5px; padding:2px; opacity:0.8;}
#flashs
	{position:fixed; top:110px; left:0px; width:100%; opacity:0.7; z-index:80;}
#flashs>div
	{height:40px;}
#currentTime
	{position:fixed; top:50px; right:30px; height:40px; padding:10px 20px; border-top-left-radius:10px; border-top-right-radius:10px; background-color:#cccccc;}
#timers
	{position:fixed; top:50px; right:180px; height:40px;}
#timers>div
	{float:right; height:100%; padding:10px 20px; border-top-left-radius:10px; border-top-right-radius:10px; margin-left:30px;}

.content-text
	{white-space:pre-line;}

.content-agenda
	{margin-left:50px;}
.content-agenda .done
	{color:#777777;}

.sidebar
	{position:absolute; top:130px; right:1em; width:10em; border-radius:0.5em; background-color:#ccc;}
.sidebar>*
	{padding:0.2em; margin-bottom:0.3em;}
.sidebar .sidebar-header
	{background-color:#000080; color:#fff; text-align:center; border-top-left-radius:0.5em; border-top-right-radius:0.5em; padding:0.3em;}
.content-motion.motion-status *
	{text-align:right;}
.content-motion .motion-submitter
	{text-align:right;}
.content-motion.motion-text
	{margin-right:11em; border:0.1em dotted darkgray; padding:0.2em;}
.content-motion.motion-argumentation
	{margin-right:11em; margin-top:0.3em;}
.ballot-maxvotes
	{text-align:right;}
.ballot-status *
	{text-align:right;}

.flash-danger
	{background-color:#b94a48;}
.flash-information
	{background-color:#3a87ad;}
.flash-success
	{background-color:#468847;}

#projector-controls>*
	{width:14px; height:14px; background-image:url(/bootstrap/img/glyphicons-halflings.png); background-repeat:no-repeat; display:block; float:left;}
#projector-reset
	{background-position:-216px -24px;}
#projector-zoom-in
	{background-position:-336px 0px;}
#projector-zoom-out
	{background-position:-360px 0px;}
#projector-scroll-up
	{background-position:-288px -120px;}
#projector-scroll-down
	{background-position:-313px -119px;}

.line-numbers .number
	{display:inline-block; color: teal; font: 90% monospace; width:1.5em; text-align:right; margin-right:0.5em;}

